include/mkvcodec/mkvc.h


typedef enum mkvc_result {
    MKVC_OK = 0,                     
    MKVC_ERROR_INVALID_ARGUMENT = 1, 
    MKVC_ERROR_BUFFER_TOO_SMALL = 2, 
    MKVC_ERROR_NOT_SUPPORTED = 3,    
    MKVC_ERROR_INTERNAL = 4,         
    MKVC_ERROR_INVALID_STATE = 5,    
    MKVC_ERROR_IO = 6,               
    MKVC_ERROR_CODEC = 7,            
    MKVC_END_OF_STREAM = 8,          
    MKVC_WOULD_BLOCK = 9,            
    MKVC_ERROR_TIMEOUT = 10,         
    MKVC_ERROR_CANCELLED = 11        
} mkvc_result;
typedef struct mkvc_version {
    uint32_t struct_size; 
    uint32_t abi_version; 
    uint32_t major;       
    uint32_t minor;       
    uint32_t patch;       
} mkvc_version;
typedef struct mkvc_backend_capability {
    uint32_t struct_size; 
    uint32_t backend;     
    uint32_t codec;       
    uint8_t can_decode;   
    uint8_t can_encode;   
    uint8_t is_hardware;  
    uint8_t reserved;     
} mkvc_backend_capability;
typedef struct mkvc_frame_process_config {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t backend;        
    uint32_t crop_x;
    uint32_t crop_y;
    uint32_t crop_width;
    uint32_t crop_height;
    uint32_t output_width;  
    uint32_t output_height; 
    uint32_t fit;           
    uint32_t rotation;      
    uint8_t flip_horizontal;
    uint8_t flip_vertical;
    uint8_t reserved[2];
    uint32_t background_rgba; 
} mkvc_frame_process_config;
typedef struct mkvc_gpu_frame_desc {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t backend;        
    uint32_t memory_type;    
    uint64_t device_id;      
    uint64_t generation;     
    uint32_t pixel_format;
    uint32_t width;
    uint32_t height;
    uint32_t plane_count;
    uint64_t plane_offsets[4];
    uint64_t pitches[4];
    int64_t pts;
    uint32_t color_primaries;
    uint32_t color_transfer;
    uint32_t color_matrix;
    uint32_t color_range;
} mkvc_gpu_frame_desc;
typedef struct mkvc_gpu_native_handle_desc {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t type;           
    uint32_t borrowed;       
    uint64_t device_id;
    uint64_t generation;
    uint64_t handles[4];
} mkvc_gpu_native_handle_desc;
typedef mkvc_result (*mkvc_gpu_dependency_callback)(void* user_data, uint64_t producer_event,
                                                    uint64_t consumer_stream);
typedef struct mkvc_gpu_external_frame_config {
    uint32_t struct_size;
    uint32_t struct_version; 
    mkvc_gpu_frame_desc frame;
    mkvc_gpu_native_handle_desc native_handle;
    mkvc_gpu_external_query_callback query;
    mkvc_gpu_external_release_callback release;
    void* user_data;
} mkvc_gpu_external_frame_config;
typedef struct mkvc_pipeline_metrics {
    uint32_t struct_size;           
    uint32_t struct_version;        
    uint64_t accepted_frames;       
    uint64_t completed_frames;      
    uint64_t rejected_frames;       
    uint64_t queue_wait_ns;         
    uint64_t backend_time_ns;       
    uint32_t queue_capacity;        
    uint32_t peak_queue_depth;      
    uint32_t hardware_pending_peak; 
    uint32_t copy_path;             
} mkvc_pipeline_metrics;
typedef struct mkvc_copy_policy {
    uint32_t struct_size;          
    uint32_t struct_version;       
    uint32_t require_gpu_resident; 
    uint32_t allow_gpu_copy;       
    uint32_t allow_cpu_copy;       
} mkvc_copy_policy;
typedef struct mkvc_cpu_frame_pool_config {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t pixel_format;   
    uint32_t width;
    uint32_t height;
    uint32_t capacity; 
} mkvc_cpu_frame_pool_config;
typedef struct mkvc_gpu_resource_pool_config {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t capacity;       
    uint32_t reserved;       
} mkvc_gpu_resource_pool_config;
typedef struct mkvc_gpu_resource_reservation_desc {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t slot_index;
    uint32_t reserved;
    uint64_t generation; 
} mkvc_gpu_resource_reservation_desc;
typedef struct mkvc_gpu_resource_pool_stats {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t capacity;
    uint32_t in_use;
    uint32_t peak_in_use;
    uint32_t reserved;
    uint64_t acquisitions;
    uint64_t rejected_acquisitions;
    uint64_t wait_ns;
} mkvc_gpu_resource_pool_stats;
typedef struct mkvc_cpu_buffer_desc {
    uint32_t struct_size;
    uint32_t struct_version; 
    uint32_t pixel_format;
    uint32_t width;
    uint32_t height;
    uint32_t plane_count;
    uint64_t generation;
} mkvc_cpu_buffer_desc;
typedef struct mkvc_encoder_config {
    uint32_t struct_size;              
    uint32_t struct_version;           
    const char* output_path_utf8;      
    uint32_t codec;                    
    uint32_t backend;                  
    uint32_t width;                    
    uint32_t height;                   
    uint32_t fps_num;                  
    uint32_t fps_den;                  
    uint32_t quality;                  
    uint32_t keyframe_interval_frames; 
    uint32_t threads;                  
    uint32_t queue_size; 
} mkvc_encoder_config;
typedef struct mkvc_frame_view {
    uint32_t struct_size;     
    uint32_t struct_version;  
    uint32_t pixel_format;    
    uint32_t width;           
    uint32_t height;          
    const uint8_t* planes[4]; 
    int32_t strides[4];       
    int64_t pts;              
} mkvc_frame_view;
typedef struct mkvc_mutable_frame_view {
    uint32_t struct_size;    
    uint32_t struct_version; 
    uint32_t pixel_format;   
    uint32_t width;          
    uint32_t height;         
    uint8_t* planes[4];      
    int32_t strides[4];      
    int64_t pts;             
} mkvc_mutable_frame_view;
typedef struct mkvc_encoder mkvc_encoder;
typedef struct mkvc_decoder mkvc_decoder;
typedef struct mkvc_frame mkvc_frame;
typedef struct mkvc_gpu_frame mkvc_gpu_frame;
typedef struct mkvc_submission mkvc_submission;
typedef struct mkvc_cpu_frame_pool mkvc_cpu_frame_pool;
typedef struct mkvc_cpu_buffer mkvc_cpu_buffer;
typedef struct mkvc_gpu_resource_pool mkvc_gpu_resource_pool;
typedef struct mkvc_gpu_resource_reservation mkvc_gpu_resource_reservation;
typedef struct mkvc_decoder_config {
    uint32_t struct_size;        
    uint32_t struct_version;     
    const char* input_path_utf8; 
    uint32_t codec;              
    uint32_t backend;            
    uint32_t threads; 
    uint32_t prefetch; 
} mkvc_decoder_config;
MKVC_API mkvc_result mkvc_get_version(mkvc_version* out_version);
MKVC_API mkvc_result mkvc_get_backend_capabilities(mkvc_backend_capability* capabilities,
                                                   size_t* inout_count);
MKVC_API const char* mkvc_result_string(mkvc_result result);
MKVC_API mkvc_result mkvc_encoder_create(const mkvc_encoder_config* config,
                                         mkvc_encoder** out_encoder);
MKVC_API mkvc_result mkvc_encoder_set_copy_policy(mkvc_encoder* encoder,
                                                  const mkvc_copy_policy* policy);
MKVC_API mkvc_result mkvc_encoder_write_frame(mkvc_encoder* encoder, const mkvc_frame_view* frame);
MKVC_API mkvc_result mkvc_encoder_write_frame_borrowed(mkvc_encoder* encoder,
                                                       const mkvc_frame_view* frame);
MKVC_API mkvc_result mkvc_encoder_submit_frame_borrowed(mkvc_encoder* encoder,
                                                        const mkvc_frame_view* frame,
                                                        mkvc_submission** out_submission);
MKVC_API mkvc_result mkvc_encoder_write_gpu_frame(mkvc_encoder* encoder,
                                                  const mkvc_gpu_frame* frame);
MKVC_API mkvc_result mkvc_encoder_try_write_frame(mkvc_encoder* encoder,
                                                  const mkvc_frame_view* frame);
MKVC_API mkvc_result mkvc_encoder_flush(mkvc_encoder* encoder);
MKVC_API mkvc_result mkvc_encoder_cancel(mkvc_encoder* encoder);
MKVC_API mkvc_result mkvc_encoder_close(mkvc_encoder* encoder);
MKVC_API mkvc_result mkvc_encoder_get_metrics(const mkvc_encoder* encoder,
                                              mkvc_pipeline_metrics* out_metrics);
MKVC_API void mkvc_encoder_destroy(mkvc_encoder* encoder);
MKVC_API mkvc_result mkvc_submission_query(const mkvc_submission* submission, uint32_t* out_status);
MKVC_API void mkvc_submission_release(mkvc_submission* submission);
MKVC_API mkvc_result mkvc_cpu_frame_pool_create(const mkvc_cpu_frame_pool_config* config,
                                                mkvc_cpu_frame_pool** out_pool);
MKVC_API void mkvc_cpu_frame_pool_destroy(mkvc_cpu_frame_pool* pool);
MKVC_API mkvc_result mkvc_cpu_frame_pool_acquire(mkvc_cpu_frame_pool* pool, uint32_t timeout_ms,
                                                 mkvc_cpu_buffer** out_buffer);
MKVC_API mkvc_result mkvc_cpu_buffer_get_desc(const mkvc_cpu_buffer* buffer,
                                              mkvc_cpu_buffer_desc* out_desc);
MKVC_API mkvc_result mkvc_cpu_buffer_get_view(const mkvc_cpu_buffer* buffer,
                                              mkvc_mutable_frame_view* out_view);
MKVC_API void mkvc_cpu_buffer_release(mkvc_cpu_buffer* buffer);
MKVC_API mkvc_result mkvc_encoder_submit_cpu_buffer(mkvc_encoder* encoder,
                                                    const mkvc_cpu_buffer* buffer, int64_t pts,
                                                    mkvc_submission** out_submission);
MKVC_API mkvc_result mkvc_gpu_resource_pool_create(const mkvc_gpu_resource_pool_config* config,
                                                   mkvc_gpu_resource_pool** out_pool);
MKVC_API void mkvc_gpu_resource_pool_destroy(mkvc_gpu_resource_pool* pool);
MKVC_API mkvc_result mkvc_gpu_resource_pool_acquire(
    mkvc_gpu_resource_pool* pool, uint32_t timeout_ms,
    mkvc_gpu_resource_reservation** out_reservation);
MKVC_API mkvc_result mkvc_gpu_resource_reservation_get_desc(
    const mkvc_gpu_resource_reservation* reservation, mkvc_gpu_resource_reservation_desc* out_desc);
MKVC_API void mkvc_gpu_resource_reservation_release(mkvc_gpu_resource_reservation* reservation);
MKVC_API mkvc_result mkvc_gpu_resource_pool_get_stats(const mkvc_gpu_resource_pool* pool,
                                                      mkvc_gpu_resource_pool_stats* out_stats);
MKVC_API const char* mkvc_get_last_error(void);
MKVC_API mkvc_result mkvc_decoder_create(const mkvc_decoder_config* config,
                                         mkvc_decoder** out_decoder);
MKVC_API mkvc_result mkvc_decoder_set_copy_policy(mkvc_decoder* decoder,
                                                  const mkvc_copy_policy* policy);
MKVC_API mkvc_result mkvc_decoder_read(mkvc_decoder* decoder, mkvc_frame** out_frame);
MKVC_API mkvc_result mkvc_decoder_read_gpu(mkvc_decoder* decoder, mkvc_gpu_frame** out_frame);
MKVC_API mkvc_result mkvc_decoder_close(mkvc_decoder* decoder);
MKVC_API mkvc_result mkvc_decoder_get_metrics(const mkvc_decoder* decoder,
                                              mkvc_pipeline_metrics* out_metrics);
MKVC_API void mkvc_decoder_destroy(mkvc_decoder* decoder);
MKVC_API void mkvc_frame_retain(mkvc_frame* frame);
MKVC_API void mkvc_frame_release(mkvc_frame* frame);
MKVC_API mkvc_result mkvc_frame_get_view(const mkvc_frame* frame, mkvc_frame_view* out_view);
MKVC_API mkvc_result mkvc_frame_copy_to(const mkvc_frame* frame,
                                        mkvc_mutable_frame_view* destination);
MKVC_API mkvc_result mkvc_frame_process(const mkvc_frame* frame,
                                        const mkvc_frame_process_config* config,
                                        mkvc_frame** out_frame);
MKVC_API mkvc_result mkvc_gpu_frame_retain(mkvc_gpu_frame* frame);
MKVC_API void mkvc_gpu_frame_release(mkvc_gpu_frame* frame);
MKVC_API mkvc_result mkvc_gpu_frame_get_desc(const mkvc_gpu_frame* frame,
                                             mkvc_gpu_frame_desc* out_desc);
MKVC_API mkvc_result mkvc_gpu_frame_query_completion(const mkvc_gpu_frame* frame,
                                                     uint32_t* out_status);
MKVC_API mkvc_result mkvc_gpu_frame_wait(const mkvc_gpu_frame* frame, uint32_t timeout_ms);
MKVC_API mkvc_result mkvc_gpu_frame_get_native_handle(const mkvc_gpu_frame* frame,
                                                      mkvc_gpu_native_handle_desc* out_handle);
MKVC_API mkvc_result mkvc_gpu_frame_import_external(const mkvc_gpu_external_frame_config* config,
                                                    mkvc_gpu_frame** out_frame);
MKVC_API mkvc_result mkvc_gpu_frame_import_va_surface(const mkvc_gpu_external_frame_config* config,
                                                      mkvc_gpu_frame** out_frame);
MKVC_API mkvc_result mkvc_gpu_frame_import_d3d11_fence(const mkvc_gpu_external_frame_config* config,
                                                       mkvc_gpu_frame** out_frame);
MKVC_API mkvc_result mkvc_gpu_frame_import_level_zero_event(
    const mkvc_gpu_external_frame_config* config, mkvc_gpu_frame** out_frame);
MKVC_API mkvc_result mkvc_gpu_frame_import_cuda_event(const mkvc_gpu_external_frame_config* config,
                                                      mkvc_gpu_frame** out_frame);
MKVC_API mkvc_result mkvc_gpu_frame_export_dlpack(mkvc_gpu_frame* frame, uint32_t plane_index,
                                                  uint64_t consumer_stream,
                                                  void** out_managed_tensor);
MKVC_API mkvc_result mkvc_gpu_frame_export_dlpack_with_dependency(
    mkvc_gpu_frame* frame, uint32_t plane_index, uint64_t consumer_stream,
    mkvc_gpu_dependency_callback callback, void* user_data, void** out_managed_tensor);
MKVC_API void mkvc_dlpack_managed_tensor_release(void* managed_tensor);