dotnet/MkvCodec/NativeMethods.Generated.cs

// <auto-generated />
using System.Runtime.InteropServices;

namespace MkvCodec;

internal static partial class NativeMethods
{
    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_cpu_buffer_get_desc(
        MkvCpuBufferHandle buffer,
        ref MkvCpuBufferDescriptor out_desc);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_cpu_buffer_get_view(
        MkvCpuBufferHandle buffer,
        ref NativeMutableFrameView out_view);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_cpu_buffer_release(
        nint buffer);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_cpu_frame_pool_acquire(
        MkvCpuFramePoolHandle pool,
        uint timeout_ms,
        out MkvCpuBufferHandle out_buffer);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_cpu_frame_pool_create(
        ref NativeCpuFramePoolConfig config,
        out MkvCpuFramePoolHandle out_pool);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_cpu_frame_pool_destroy(
        nint pool);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_decoder_close(
        nint decoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_decoder_create(
        ref NativeDecoderConfig config,
        out MkvDecoderHandle out_decoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_decoder_destroy(
        nint decoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_decoder_get_metrics(
        nint decoder,
        ref MkvPipelineMetrics out_metrics);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_decoder_read(
        MkvDecoderHandle decoder,
        out MkvFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_decoder_read_gpu(
        MkvDecoderHandle decoder,
        out MkvGpuFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_decoder_set_copy_policy(
        MkvDecoderHandle decoder,
        ref NativeCopyPolicy policy);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_dlpack_managed_tensor_release(
        nint managed_tensor);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_cancel(
        MkvEncoderHandle encoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_close(
        nint encoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_create(
        ref NativeEncoderConfig config,
        out MkvEncoderHandle out_encoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_encoder_destroy(
        nint encoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_flush(
        MkvEncoderHandle encoder);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_get_metrics(
        nint encoder,
        ref MkvPipelineMetrics out_metrics);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_set_copy_policy(
        MkvEncoderHandle encoder,
        ref NativeCopyPolicy policy);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_submit_cpu_buffer(
        MkvEncoderHandle encoder,
        MkvCpuBufferHandle buffer,
        long pts,
        out MkvSubmissionHandle out_submission);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_submit_frame_borrowed(
        MkvEncoderHandle encoder,
        ref NativeFrameView frame,
        out MkvSubmissionHandle out_submission);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_try_write_frame(
        MkvEncoderHandle encoder,
        ref NativeFrameView frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_write_frame(
        MkvEncoderHandle encoder,
        ref NativeFrameView frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_write_frame_borrowed(
        MkvEncoderHandle encoder,
        ref NativeFrameView frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_encoder_write_gpu_frame(
        MkvEncoderHandle encoder,
        MkvGpuFrameHandle frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_frame_copy_to(
        MkvFrameHandle frame,
        ref NativeMutableFrameView destination);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_frame_get_view(
        MkvFrameHandle frame,
        ref NativeFrameView out_view);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_frame_process(
        MkvFrameHandle frame,
        ref NativeFrameProcessConfig config,
        out MkvFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_frame_release(
        nint frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_frame_retain(
        MkvFrameHandle frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_get_backend_capabilities(
        nint capabilities,
        ref nuint inout_count);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint mkvc_get_last_error();

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_get_version(
        ref MkvVersion out_version);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_export_dlpack(
        MkvGpuFrameHandle frame,
        uint plane_index,
        ulong consumer_stream,
        out nint out_managed_tensor);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_export_dlpack_with_dependency(
        MkvGpuFrameHandle frame,
        uint plane_index,
        ulong consumer_stream,
        nint callback,
        nint user_data,
        out nint out_managed_tensor);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_get_desc(
        MkvGpuFrameHandle frame,
        ref MkvGpuFrameDescriptor out_desc);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_get_native_handle(
        MkvGpuFrameHandle frame,
        ref MkvGpuNativeHandleDescriptor out_handle);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_import_cuda_event(
        ref NativeGpuExternalFrameConfig config,
        out MkvGpuFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_import_d3d11_fence(
        ref NativeGpuExternalFrameConfig config,
        out MkvGpuFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_import_external(
        ref NativeGpuExternalFrameConfig config,
        out MkvGpuFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_import_level_zero_event(
        ref NativeGpuExternalFrameConfig config,
        out MkvGpuFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_import_va_surface(
        ref NativeGpuExternalFrameConfig config,
        out MkvGpuFrameHandle out_frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_query_completion(
        MkvGpuFrameHandle frame,
        out uint out_status);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_gpu_frame_release(
        nint frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_retain(
        MkvGpuFrameHandle frame);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_frame_wait(
        MkvGpuFrameHandle frame,
        uint timeout_ms);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_resource_pool_acquire(
        MkvGpuResourcePoolHandle pool,
        uint timeout_ms,
        out MkvGpuResourceReservationHandle out_reservation);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_resource_pool_create(
        ref NativeGpuResourcePoolConfig config,
        out MkvGpuResourcePoolHandle out_pool);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_gpu_resource_pool_destroy(
        nint pool);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_resource_pool_get_stats(
        MkvGpuResourcePoolHandle pool,
        ref MkvGpuResourcePoolStatistics out_stats);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_gpu_resource_reservation_get_desc(
        MkvGpuResourceReservationHandle reservation,
        ref MkvGpuResourceReservationDescriptor out_desc);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_gpu_resource_reservation_release(
        nint reservation);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern nint mkvc_result_string(
        MkvResult result);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern MkvResult mkvc_submission_query(
        MkvSubmissionHandle submission,
        out MkvSubmissionStatus out_status);

    [DllImport(LibraryName, CallingConvention = CallingConvention.Cdecl)]
    internal static extern void mkvc_submission_release(
        nint submission);
